--- a/index.html
+++ b/index.html
@@ -4,14 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NYT Search</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Hello</h1>
-    <form id="search_term">
-        <input type="text" id="query">
-        <button type="submit">Submit</button>
-    </form>            
+<div class="container">
+        <div class="jumbotron">
+                <h1 class="display-3">New York Times Search</h1>
+                <p class="lead">This search engine allows you to track down the latest and greatest news from the New York Times.</p>
+                <hr class="my-4">
+                <p>Search Away!</p>
+                <p class="lead">
+        
+                </p>
+              </div>
+    <div class="row">
+    <div class "col">
+            <form id="search_term">
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Search Term</label>
+                      <input type="search term " class="form-control" id="query" aria-describedby="searchHelp" placeholder="Enter Search Term">
+                      <small id="searchHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputRecordsRetrieved1">Number of Records Retrieved</label>
+                      <input type="records" class="form-control" id="recordsNum" placeholder="Records">
+                    </div>
+                    <div class="form-group">
+                            <label for="exampleInputStartYear1">Start Year(Optional)</label>
+                            <input type="search term " class="form-control" id="startYear" aria-describedby="searchHelp" placeholder="YYYYMMDD">
+                            <small id="startYearText" class="form-text text-muted"></small>
+                          </div>
+                          <div class="form-group">
+                            <label for="exampleInputEndYear1">End of Year (Optional)</label>
+                            <input type="records" class="form-control" id="endYear" placeholder="YYYYMMDD">
+                          </div>
+                    <button type="submit" class="btn btn-primary">Search</button>
+            </form>
+        <div class="row">
+        <div class="column">
+        <ul class="list-group">
+            <li id="title"></li>
+        </ul>
+           
+        </div>
+
+        </div>
+    </div>
+    </div>
+   
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./script.js"></script>
 </body>
